<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.asus.diners.Fragment.DetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

       <GridLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:columnCount="4"
           android:rowCount="5"
           android:orientation="horizontal"
           >

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="@dimen/text_height"
               android:text="@string/material"
               android:layout_row="0"
               android:layout_column="0"
               android:layout_columnWeight="1"
               />

           <TextView
               android:id="@+id/material"
               android:layout_width="wrap_content"
               android:layout_height="@dimen/text_height"
               android:text="@string/unknown"
               android:layout_row="0"
               android:layout_column="1"
               android:layout_columnWeight="1"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="@dimen/text_height"
               android:text="@string/taste"
               android:layout_row="1"
               android:layout_column="0"
               android:layout_columnWeight="1"/>

           <TextView
               android:id="@+id/taste"
               android:layout_width="wrap_content"
               android:layout_height="@dimen/text_height"
               android:text="@string/unknown"
               android:layout_row="1"
               android:layout_column="1"
               android:layout_columnWeight="1"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="@dimen/text_height"
               android:text="@string/calorie"
               android:layout_row="2"
               android:layout_column="0"
               android:layout_columnWeight="1"/>

           <TextView
               android:id="@+id/calorie"
               android:layout_width="wrap_content"
               android:layout_height="@dimen/text_height"
               android:text="@string/unknown"
               android:layout_row="2"
               android:layout_column="1"
               android:layout_columnWeight="1"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="@dimen/text_height"
               android:text="@string/system"
               android:layout_row="3"
               android:layout_column="0"
               android:layout_columnWeight="1"/>

           <TextView
               android:id="@+id/system"
               android:layout_width="wrap_content"
               android:layout_height="@dimen/text_height"
               android:text="@string/unknown"
               android:layout_row="3"
               android:layout_column="1"
               android:layout_columnWeight="1"/>

       </GridLayout>

    </ScrollView>

</FrameLayout>
